--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "axios": "^1.9.0",
     "pinia": "^3.0.2",
+    "video.js": "^8.23.3",
+    "videojs-youtube": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "4"
   },
